test/fail/basic_syntax/wrong_arg_type_empty_func.lly
#[
SyntaxError: Function f, argument #1 is invalid:
Expected Type: function ()
Received Type: integer
    from wrong_arg_type_empty_func.lly:10
]#

define f(g: function()) {  }

f(10)
